# PlanetNine

./: .gitignore  PlanetNine.doap  README.md  io.github.nokse22.PlanetNine.json  meson.build  python3-modules.json  python3-python-lsp-server.json
.github/workflows/: flatpak.yaml  pylint.yml
build-aux/: io.github.nokse22.PlanetNine.json  python3-modules.json  python3-pytest.json
data/: io.github.nokse22.PlanetNine.desktop.in  io.github.nokse22.PlanetNine.gschema.xml  io.github.nokse22.PlanetNine.metainfo.xml.in  meson.build
data/icons/: meson.build
docs/: Actions.md
po/: POTFILES.in  meson.build
src/: __init__.py  async_helpers.py  block.py  browser_page.py  cell.py  cell_ui.py  code_page.py  command_line.py  completion_providers.py  console_cell.py  console_page.py  converters.py  image_view.py  jupyter_kernel.py  jupyter_server.py  kernel_manager_view.py  launcher.py  main.py  markdown_textview.py  meson.build  notebook.py  notebook_page.py  notebook_save_delegate.py  notebook_view.py  output.py  planetnine.gresource.xml  planetnine.in  preferences.py  style.css  terminal_textview.py  tree_row_widget.py  window.py  workspace_view.py
src/backend/: command_line.py  jupyter_kernel.py  jupyter_server.py
src/completion_providers/: completion_providers.py  kernel_completion.py  tab_provider.py
src/custom_languages/: python3cells.lang
src/gtk/: block.ui  browser_page.ui  cell.ui  cell_drag.ui  code_page.ui  console_cell.ui  console_page.ui  error_dialog.ui  geo_json_page.ui  images_panel.ui  json_viewer.ui  json_viewer_page.ui  kernel_manager_view.ui  launcher.ui  matrix_page.ui  notebook_page.ui  notebook_view.ui  preferences.ui  text_page.ui  variables_view.ui  window.ui  workspace_view.ui
src/interfaces/: cells.py  cursor.py  disconnectable.py  interface.py  kernel.py  language.py  saveable.py  searchable.py  style_update.py
src/models/: cell.py  multi_list_model.py  notebook.py  output.py
src/others/: image_loader.py  no_save_delegate.py  notebook_save_delegate.py  output_loader.py  preferences.py  save_delegate.py  style_manager.py
src/pages/: browser_page.py  code_page.py  console_page.py  geo_json_page.py  json_viewer_page.py  matrix_page.py  notebook_page.py  text_page.py
src/panels/: images_panel.py  kernel_manager_panel.py  kernel_terminal_panel.py  terminal_panel.py  variables_panel.py  workspace_panel.py
src/styles/: palettes.xml
src/styles/palettes/: Vs Code.palette  campbell.palette  catppuccin.palette  dracula.palette  gnome.palette  linux.palette  nord.palette  palette2scheme.py  palettes.xml  rxvt.palette  solarized.palette  tango.palette  xterm.palette
src/styles/schemes/: campbell-dark.xml  campbell-light.xml  catppuccin-dark.xml  catppuccin-light.xml  dracula-dark.xml  dracula-light.xml  gnome-dark.xml  gnome-light.xml  linux-dark.xml  linux-light.xml  nord-dark.xml  nord-light.xml  oblivion-dark.xml  rxvt-dark.xml  rxvt-light.xml  solarized-dark.xml  solarized-light.xml  tango-dark.xml  tango-light.xml  vs-code-dark.xml  vs-code-light.xml  xterm-dark.xml  xterm-light.xml
src/utils/: converters.py  utilities.py
src/widgets/: cell_ui.py  chapter_row.py  console_cell.py  geo_json_map.py  image_view.py  images_panel.py  json_viewer.py  kernel_manager_view.py  launcher.py  markdown_textview.py  matrix_viewer.py  terminal_textview.py  tree_row_widget.py  variables_view.py  workspace_view.py
tests/: __init__.py  meson.build  test_import_export.py
tests/data/: csv_edge_cases.csv  images_url_display.ipynb  json_display.ipynb  json_sample.json  markdown_cell.ipynb  markdown_display.ipynb  png_file_display.ipynb  png_graph_display.ipynb  stream_output.ipynb  text_output.ipynb  text_sample.txt
tests/data/notebooks/: images_url_display.ipynb  json_display.ipynb  markdown_cell.ipynb  markdown_display.ipynb  png_file_display.ipynb  png_graph_display.ipynb  stream_output.ipynb  text_output.ipynb
