pkgdatadir = get_option('prefix') / get_option('datadir') / meson.project_name()
moduledir = pkgdatadir / 'planetnine'
gnome = import('gnome')

gnome.compile_resources('planetnine',
  'planetnine.gresource.xml',
  gresource_bundle: true,
  install: true,
  install_dir: pkgdatadir,
)

python = import('python')

conf = configuration_data()
conf.set('PYTHON', python.find_installation('python3').full_path())
conf.set('VERSION', meson.project_version())
conf.set('localedir', get_option('prefix') / get_option('localedir'))
conf.set('pkgdatadir', pkgdatadir)

configure_file(
  input: 'planetnine.in',
  output: 'planetnine',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir'),
  install_mode: 'r-xr-xr-x'
)

planetnine_sources = [
  '__init__.py',
  'main.py',
  'window.py',

  'preferences.py',
]

install_data(planetnine_sources, install_dir: moduledir)

install_subdir('models', install_dir: moduledir)
install_subdir('pages', install_dir: moduledir)
install_subdir('widgets', install_dir: moduledir)
install_subdir('others', install_dir: moduledir)
install_subdir('utils', install_dir: moduledir)
install_subdir('completion_providers', install_dir: moduledir)
install_subdir('backend', install_dir: moduledir)
install_subdir('panels', install_dir: moduledir)
install_subdir('interfaces', install_dir: moduledir)